# Alfis-android

./: .gitignore  README.md  android_target_fix.patch  build.sh  build_native.sh
.github/workflows/: build-and-release.yml
alfis/: Cargo.toml
alfis/src/: lib.rs
android/: gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/name/alfis/android/: MainActivity.kt
android/app/src/main/java/name/alfis/android/data/: AlfisConfig.kt
android/app/src/main/java/name/alfis/android/native/: AlfisNative.kt
android/app/src/main/java/name/alfis/android/receiver/: BootReceiver.kt
android/app/src/main/java/name/alfis/android/service/: AlfisDnsService.kt
android/app/src/main/java/name/alfis/android/ui/theme/: AlfisTheme.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
android/gradle/: libs.versions.toml
