[package]
name = "alfis-android"
version = "0.8.6"
authors = ["Revertron <alfis@revertron.com>"]
edition = "2021"

[lib]
name = "alfis"
crate-type = ["cdylib"]

[dependencies]
# Core Alfis dependencies (subset of main crate)
getopts = "0.2.21"
log = "0.4.22"
simplelog = "0.12.2"
toml = "0.8.19"
sha2 = "0.10.8"
ed25519-dalek = "2.1.1"
x25519-dalek = { version = "2.0.1", features = ["reusable_secrets"] }
ecies-ed25519-ng = { git = "https://github.com/Revertron/ecies-ed25519-ng", rev = "554ca29", version = "0.5.3" }
chacha20poly1305 = "0.10.1"
blakeout = "0.3.0"
num_cpus = "1.16.0"
byteorder = "1.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.3"
serde_cbor = "0.11.2"
num-bigint = "0.4.6"
chrono = { version = "0.4.38", features = ["serde"] }
time = "0.3.36"
rand = { package = "rand", version = "0.8.5" }
sqlite = "0.36.0"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
mio = { version = "1.0.0", features = ["os-poll", "net"] }
lru = "0.12"
derive_more = { version = "1.0.0", features = ["display", "error", "from"] }
lazy_static = "1.5.0"
spmc = "0.3.0"

# JNI bindings
jni = "0.21"
android_logger = "0.14"

# DoH support (optional for Android)
ureq = { version = "2.10", optional = true }

# Local alfis dependency (path will be updated by build script)
alfis = { path = "../", default-features = false }

[features]
default = ["doh"]
doh = ["ureq", "alfis/doh"]